add who we are section

--- a/join-a-team-site/src/Teams.css
+++ b/join-a-team-site/src/Teams.css
@@ -78,7 +78,7 @@ a:hover {
     display: grid;
     grid-template-columns: auto auto auto;
     margin-top: 30px;
-  }
+}
 
 .member-item {
     border: 9px solid #A3F7CB;
@@ -89,4 +89,19 @@ a:hover {
     width: 65px;
     height: 200px;
     text-align: center;
+}
+
+.member-info-container {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    margin-top: 30px;
+}
+
+.member-info-item {
+    text-align: center;
+    font: Inter;
+    font-weight: 400;
+    color: #959595;
+    line-height: 30%;
+    font-size: 18px;
 }
