add info page for members

--- a/join-a-team-site/src/Teams.css
+++ b/join-a-team-site/src/Teams.css
@@ -48,7 +48,7 @@
 
 .vacancy-item {
     border-radius: 30px;
-    background: #A3F7CB;
+    background: #82C8EF;
     margin-right: 30px;
     padding: 50px;
     width: 80px;
@@ -61,7 +61,7 @@ a {
 }
 
 a:hover {
-    background: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)) #A3F7CB;
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)) #82C8EF;
 }
 
 .vacancy {
